# slanghunter

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  README.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py  models.py
data/: README.md  drugs.json  money_laundering.json  surikae.json
src/: __init__.py  __main__.py  ml.py  slanghunter.py
tests/: __init__.py  test_slanghunter.py
