# ──────────────────────────────────────────────────────────────────────────────
# pyproject.toml — SlangHunter packaging configuration
# Build backend: Hatchling (PEP 517/518 compliant, modern standard)
# ──────────────────────────────────────────────────────────────────────────────

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"


# ──────────────────────────────────────────────────────────────────────────────
# Project metadata (PEP 621)
# ──────────────────────────────────────────────────────────────────────────────

[project]
name        = "slanghunter"
version     = "0.1.0"
description = """
A deterministic, rule-based Trust & Safety engine for detecting illegal
listings on online marketplaces.
"""
readme      = "README.md"
license     = { file = "LICENSE" }

# Python 3.10+ required for PEP 604 union syntax (float | None)
requires-python = ">=3.10"

# ZERO runtime dependencies — preserved by design.
# This package depends exclusively on the Python standard library.
# Do not add runtime dependencies without an Architecture Decision Record.
dependencies = []

authors = [
    { name = "Luis Daniel Dos Santos", email = "L2santos29@users.noreply.github.com" },
]

keywords = [
    "trust-and-safety",
    "content-moderation",
    "nlp",
    "text-classification",
    "compliance",
    "risk-scoring",
    "illegal-listings",
    "marketplace-safety",
    "slang-detection",
    "fraud-detection",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


# ──────────────────────────────────────────────────────────────────────────────
# Optional dependency groups
# ──────────────────────────────────────────────────────────────────────────────

[project.optional-dependencies]
# Development and quality-assurance tools
# Upper bounds cap at next-major to prevent silent breaking-change upgrades (S6 supply-chain hardening).
dev = [
    "pytest>=7.4.0,<9.0",
    "pytest-cov>=4.0,<6.0",
    "flake8>=6.1.0,<8.0",
    "mypy>=1.5,<2.0",
]
# Optional dependency for future YAML knowledge-base support.
data = [
    "PyYAML>=6.0,<7.0",
]
# REST API stack
api = [
    "fastapi>=0.100.0,<1.0",
    "uvicorn>=0.23.0,<1.0",
    "pydantic>=2.0,<3.0",
]
# Optional ML augmentation stack
ml = [
    "scikit-learn>=1.3,<2.0",
]
# Convenience meta-extra: installs every optional group
all = [
    "slanghunter[dev,data,api,ml]",
]


# ──────────────────────────────────────────────────────────────────────────────
# CLI entry point
# Condition: src/__main__.py defines main() — confirmed at line 79.
# Usage after install:  slanghunter-demo
# Development usage:    python -m src
# ──────────────────────────────────────────────────────────────────────────────

[project.scripts]
slanghunter-demo = "src.__main__:main"


# ──────────────────────────────────────────────────────────────────────────────
# Repository URLs
# ──────────────────────────────────────────────────────────────────────────────

[project.urls]
Homepage   = "https://github.com/L2santos29/slanghunter"
Repository = "https://github.com/L2santos29/slanghunter"
Issues     = "https://github.com/L2santos29/slanghunter/issues"


# ──────────────────────────────────────────────────────────────────────────────
# Hatchling build configuration
# Declares the `src/` directory as the installable Python package.
# ──────────────────────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src"]


# ──────────────────────────────────────────────────────────────────────────────
# pytest configuration
# ──────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short --cov=src --cov=api --cov-report=term-missing --cov-fail-under=80"


[tool.coverage.run]
source = ["src", "api"]


[tool.coverage.report]
show_missing = true


# ──────────────────────────────────────────────────────────────────────────────
# mypy — strict static type checking
# ──────────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version        = "3.10"
strict                = true
ignore_missing_imports = true


# ──────────────────────────────────────────────────────────────────────────────
# NOTE: flake8 does not natively support pyproject.toml configuration.
# A [tool.flake8] section is intentionally omitted to avoid silent misconfiguration.
# All flake8 settings are authoritative in the project-root `.flake8` file.
# See: https://flake8.pycqa.org/en/latest/user/configuration.html
# ──────────────────────────────────────────────────────────────────────────────
